// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse AT-02 (2025-12-09) 1`] = `
{
  "altitude": 2317,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": Uint32Array [
    1764693000,
    1764696600,
    1764700200,
    1764703800,
    1764707400,
    1764711000,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "°C",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3760,
      3779.9999999999995,
      3779.9999999999995,
      3800,
      3800,
      3779.9999999999995,
    ],
    "RH": [
      90.9,
      null,
      null,
      null,
      94.1,
      null,
    ],
    "TA": [
      -0.39999999999997726,
      -0.7999999999999545,
      -1.099999999999966,
      -1,
      -0.8999999999999773,
      -1.1999999999999886,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-02 (assume tz = 0: UTC) 1`] = `
{
  "altitude": 2317,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": Uint32Array [
    1764183000,
    1764183600,
    1764184200,
    1764184800,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "°C",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3450,
      3420.0000000000005,
      3410,
      3400,
    ],
    "RH": [
      93.5,
      93.4,
      93.89999999999999,
      94.69999999999999,
    ],
    "TA": [
      -7.099999999999966,
      -7.099999999999966,
      -7.199999999999989,
      -7.199999999999989,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-02 (with tz = 1: UTC+1) 1`] = `
{
  "altitude": 2317,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": Uint32Array [
    1764179400,
    1764180000,
    1764180600,
    1764181200,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "°C",
    "timestamp": "",
  },
  "values": {
    "HS": [
      3450,
      3420.0000000000005,
      3410,
      3400,
    ],
    "RH": [
      93.5,
      93.4,
      93.89999999999999,
      94.69999999999999,
    ],
    "TA": [
      -7.099999999999966,
      -7.099999999999966,
      -7.199999999999989,
      -7.199999999999989,
    ],
    "timestamp": [],
  },
}
`;

exports[`parse AT-07 1`] = `
{
  "altitude": 2180,
  "station": "Gallreideschrofen",
  "timestamps": Uint32Array [
    1764186000,
    1764186600,
    1764187200,
    1764187800,
  ],
  "units": {
    "HS": "cm",
    "ISWR": "W/m²",
    "LF": "%",
    "TA": "°C",
    "TD": "°C",
    "TS.000": "°C",
    "TS.020": "°C",
    "TS.040": "°C",
    "TS.060": "°C",
    "TSS": "°C",
    "timestamp": "ISO8601",
  },
  "values": {
    "HS": [
      33.8146,
      33.8045,
      33.9723,
      34.1,
    ],
    "ISWR": [
      1,
      1,
      1,
      1,
    ],
    "LF": [
      97.9,
      97.9,
      97.9,
      97.8,
    ],
    "TA": [
      -9.299999999999955,
      -9.199999999999989,
      -9.199999999999989,
      -9.299999999999955,
    ],
    "TD": [
      -9.568907109999998,
      -9.469142906000002,
      -9.469142906000002,
      -9.581839669999965,
    ],
    "TS.000": [
      null,
      null,
      null,
      null,
    ],
    "TS.020": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TS.040": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TS.060": [
      -99.9,
      -99.9,
      -99.9,
      -99.9,
    ],
    "TSS": [
      -8.799999999999955,
      -8.799999999999955,
      -8.799999999999955,
      -9,
    ],
    "timestamp": [],
  },
}
`;
